[gd_scene load_steps=15 format=2]

[ext_resource path="res://character/bapak.png" type="Texture" id=1]
[ext_resource path="res://character/bapak_lineout.png" type="Texture" id=2]
[ext_resource path="res://character/bapak_mc.gd" type="Script" id=3]
[ext_resource path="res://font/fontdefault.tres" type="DynamicFont" id=5]
[ext_resource path="res://tilemap/button/xbutton.png" type="Texture" id=6]
[ext_resource path="res://charatercowo.png" type="Texture" id=7]
[ext_resource path="res://tilemap/button/dialogbox.png" type="Texture" id=8]
[ext_resource path="res://character/dialog_NPC_bapak.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 18.2483

[sub_resource type="CircleShape2D" id=2]
radius = 7.07107

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "tombolx",
"speed": 3.0
} ]

[node name="bapak_mc" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="dialog_NPC_bapak" type="Sprite" parent="hud"]
pause_mode = 2
visible = false
position = Vector2( 160, 120 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Text" type="RichTextLabel" parent="hud/dialog_NPC_bapak"]
margin_left = -88.0
margin_top = -24.0
margin_right = 88.0
margin_bottom = 24.0
custom_fonts/normal_font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="hud/dialog_NPC_bapak"]

[node name="tombol" type="TouchScreenButton" parent="hud/dialog_NPC_bapak"]
position = Vector2( 80, 16 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 3 )
shape_centered = false
action = "oke"

[node name="tutup" type="AnimatedSprite" parent="hud/dialog_NPC_bapak/tombol"]
frames = SubResource( 6 )
animation = "tombolx"
playing = true

[node name="Sprite" type="Sprite" parent="hud/dialog_NPC_bapak"]
position = Vector2( -122, -10 )
scale = Vector2( 0.287879, 0.287879 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="hud/dialog_NPC_bapak/tombol" to="hud/dialog_NPC_bapak" method="_on_tombol_pressed"]
